# mac-agent-cockpit

./: .gitignore  Cargo.toml  README.md  VALIDATION.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
crates/app-agent/: Cargo.toml
crates/app-agent/src/: lib.rs
crates/app-core/: Cargo.toml
crates/app-core/src/: lib.rs
crates/app-preview/: Cargo.toml
crates/app-preview/src/: lib.rs
crates/app-process/: Cargo.toml
crates/app-process/src/: lib.rs
crates/app-storage/: Cargo.toml
crates/app-storage/src/: lib.rs
crates/app-workspace/: Cargo.toml
crates/app-workspace/src/: git_overlay.rs  lib.rs  structured_diff.rs  watcher.rs
public/: splashscreen.html
scripts/: acp-session-new.json  probe-acp.mjs
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  workspace_dirty.rs
src/engine/: ipc-client.ts
src/state/: dispatch-timing-overlay.ts  use-dispatch-timing-history.ts  use-view-model.ts  view-model-store.ts
src/ui/: App.tsx
src/ui/components/: CodeEditor.tsx  CollapsiblePanel.tsx  MarkdownContent.tsx  MarkdownFilePreview.tsx  PaneResizeHandle.tsx  SplashScreen.tsx  ToolStatusBar.tsx  icons.tsx
src/ui/components/file-explorer/: SlickFileExplorer.tsx
src/ui/hosts/: CenterPaneHost.tsx  LeftPaneHost.tsx  RightPaneHost.tsx  ToastsHost.tsx  use-app-dispatch.ts
src/ui/layout/: PaneLayoutContext.tsx  use-pane-layout.ts
src/ui/markdown/: render-markdown.ts
src/ui/utils/: format.ts  paths.ts
src/ui/views/: ToastsView.tsx
src/ui/views/center-pane/: ApprovalView.tsx  CenterPaneView.tsx  MessageView.tsx  PlanPaneView.tsx  ThoughtMessageView.tsx
src/ui/views/composer/: ComposerView.tsx  ModePicker.tsx  ModelPicker.tsx  composer-utils.ts  use-outside-close.ts
src/ui/views/conversation/: ConversationRowView.tsx
src/ui/views/file-explorer/: SlickFileExplorerView.tsx
src/ui/views/left-pane/: AgentChipView.tsx  LeftPaneView.tsx
src/ui/views/quick-open/: QuickOpenView.tsx
src/ui/views/right-pane/: BrowserView.tsx  ChangedFilesView.tsx  DiffView.tsx  DispatchTimingView.tsx  FileReviewPanel.tsx  GlobalProcessView.tsx  PreviewView.tsx  ProcessView.tsx  RightPaneView.tsx  StatsPanelView.tsx  StructuredDiffView.tsx
