[workspace]
members = [
  "crates/app-core",
  "crates/app-storage",
  "crates/app-agent",
  "crates/app-process",
  "crates/app-workspace",
  "crates/app-preview",
  "src-tauri"
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
crossbeam-channel = "0.5"
dirs = "5"
libc = "0.2"
nix = { version = "0.29", features = ["process", "signal"] }
notify = "6"
parking_lot = "0.12"
rusqlite = { version = "0.31", features = ["bundled", "serde_json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
