[package]
name = "app-agent"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
app-core = { path = "../app-core" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"
